--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "matapp2",
+  "name": "gemig",
   "main": "expo-router/entry",
   "version": "1.0.0",
+  "proxy": "https://192.168.0.100/",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -15,7 +16,10 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
+    "axios": "^1.6.8",
     "expo": "~50.0.14",
+    "expo-barcode-scanner": "~12.9.3",
+    "expo-camera": "^14.1.1",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
